--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Debug C++",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/Debug/Project",
+      "program": "${workspaceFolder}/2048",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
@@ -29,7 +29,7 @@
       "stopAtEntry": false,
       "externalConsole": true,
       "cwd": "d:/VsCode/2048C++",
-      "program": "${workspaceFolder}/Project.exe",
+      "program": "${workspaceFolder}/2048.exe",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
